2006-07-20  Marc Singer  <elf@buici.com>

	* Makefile: Release 1.3.30.  Debianized.  New FIS driver.

	* src/apex/command.c (expand_variables): Using new lookup function
	to resolve variable/macro references in command expansion.

	* src/lib/lookup.c: New lookup function to handle checks to
	aliases as well as environment without explicitly including
	ifdefs.

	* src/drivers/drv-jffs2.c (block_driver): Replacing static block
	driver string with a function that looks at aliases and the
	environment.
	
	* src/drivers/drv-fat.c (block_driver): Replacing static block
	driver string with a function that looks at aliases and the
	environment.

	* src/drivers/drv-ext2.c (block_driver): Replacing static block
	driver string with a function that looks at aliases and the
	environment.

	* src/drivers/drv-fis.c: New FIS partition driver.

2006-07-18  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/reset.c: Added code to support forcing the
	CPU into LITTLEENDIAN mode.  This is necessary for running the
	NSLU2 is LE mode for Debian without replacing the Redboot loader.

2006-07-14  Marc Singer  <elf@buici.com>

	* Makefile: added logic to the build to archive prebuilt binaries
	for each configuration.

2006-07-11  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/reset.c: Fix for register being clobbered in
	apex_relocate() and messing with PUTC_LL().

2006-07-10  Marc Singer  <elf@buici.com>

	* src/apex/cmd-help.c (cmd_help): Added option to suppress the
	short help descriptions.  It saves a little bit on memory.

	* src/arch-arm/entry/apex.lds.S: Optimized the RAM memory
	footprint, especially in the xbss section.  Added stack_size
	configuration parameter. 

	* src/apex/cmd-boot.c (cmd_boot): Boot address may not come from
	the environment.
	(atag_commandline): Simplified the command line from environment
	code such that there is no code to read from environment when
	there is no environment.

2006-06-02  Marc Singer  <elf@buici.com>
