@@ -8,15 +8,16 @@ Build-Depends: perl
 Package: apex-nslu2
 Architecture: arm armeb
 Depends:
-Description: Boot Loader for Embedded Systems
+Description: APEX Boot Loader for Linksys NSLU2 
  The APEX Boot Loader is a modular and retargetable firmware loader
- suitable for embedded systems.  It may be used for the first (and
- only) stage of the boot process, or as a second stage when it is
- desirable to retain the manufacturers boot loader.
+ suitable for embedded systems.  
+ .
+ This package is a version of APEX configured for the Linksys NSLU2
+ network appliance.  In this case, APEX is used as a second stage
+ loader so that Redboot, as installed by the manufacturer, may remain.
  . 
  The APEX command line offers a comfortable (e.g. command line editing
  and history) and extensible platform for development and production
  uses.
  .
  <http://wiki.buici.com/wiki/Apex_Bootloader>
-Tag: admin::boot, interface::shell, interface::text-mode, hardware::embedded
