@@ -1,5 +1,4 @@
 /* drv-smc91x.h
-     $Id$
 
    written by Marc Singer
    28 Jul 2005
@@ -31,7 +30,7 @@ static inline u16 SMC_inw (unsigned long base, int r)
 }
 
 static inline void SMC_insw (unsigned long base, int r,
-			     unsigned char* pv, int l)
+			     void* pv, int l)
 {
   u16* ps = (u16*) pv;
   while (l-- > 0) {
@@ -47,9 +46,9 @@ static inline void SMC_outw (unsigned long base, int r, u16 v)
 }
 
 static inline void SMC_outsw (unsigned long base, int r,
-			      const unsigned char* p, int l)
+			      const void* p, int l)
 {
-  unsigned short* ps = (unsigned short*) p;
+  const unsigned short* ps = (const unsigned short*) p;
   while (l-- > 0) {
     *(volatile u16*) (base + r) = *ps++;
     SMC_IOBARRIER;
