@@ -1,3 +1,9 @@
+2006-07-21  Marc Singer  <elf@buici.com>
+
+	* Many: Modified several source files to cope with GCC 4.1.  Found
+	a bug detected by GCC's null statement detection.  Mostly warning
+	fixes dues to signed/unsigned coercion.
+
 2006-07-20  Marc Singer  <elf@buici.com>
 
 	* Makefile: Release 1.3.30.  Debianized.  New FIS driver.
